fixing mobile spacing on 404

--- a/wp-content/themes/point-church/sass/_404.scss
+++ b/wp-content/themes/point-church/sass/_404.scss
@@ -9,3 +9,11 @@
 		background: rgba(0,0,0,.5);
 	}
 }
+
+@media screen and (max-width: 1024px){
+
+	.not-here{
+		padding-top: 4em;
+	}
+
+}
